Some improvements